[gd_scene load_steps=22 format=3 uid="uid://b0kyok3lbm8je"]

[ext_resource type="Script" uid="uid://bhfq26xinbbof" path="res://game/player/player.gd" id="1_gfjh0"]
[ext_resource type="Shader" uid="uid://dvyl685qlq82v" path="res://shaders/flash.gdshader" id="2_3n5sw"]
[ext_resource type="Texture2D" uid="uid://pt8q5iaitik3" path="res://Assets/Swager's Sprites/Ship turn flipped.png" id="3_3n5sw"]
[ext_resource type="Texture2D" uid="uid://c1bo4ohdyq38j" path="res://Assets/Swager's Sprites/Ship turn.png" id="3_ypdb1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_od7r3"]
shader = ExtResource("2_3n5sw")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_ypdb1"]
atlas = ExtResource("3_3n5sw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n5sw"]
atlas = ExtResource("3_3n5sw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_od7r3"]
atlas = ExtResource("3_3n5sw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0krx5"]
atlas = ExtResource("3_ypdb1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rf20"]
atlas = ExtResource("3_ypdb1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_acvgu"]
atlas = ExtResource("3_ypdb1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0e2h"]
atlas = ExtResource("3_ypdb1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gfjh0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypdb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n5sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od7r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0krx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rf20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acvgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0e2h")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_khfn1"]
radius = 12.0416

[sub_resource type="Animation" id="Animation_od7r3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3n5sw"]
resource_name = "flash"
length = 0.15
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0krx5"]
_data = {
&"RESET": SubResource("Animation_od7r3"),
&"flash": SubResource("Animation_3n5sw")
}

[sub_resource type="Curve2D" id="Curve2D_3n5sw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -140, -70, 0, 0, 0, 0, 140, -70)
}
point_count = 2

[sub_resource type="Animation" id="Animation_5fytw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a4w0n"]
resource_name = "death"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.23333, 1.73333, 1.93333, 2.1, 2.16667, 2.2, 2.26667, 2.3, 2.33333, 2.36667, 2.4, 2.43333, 2.46667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"explode"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ste8"]
_data = {
&"RESET": SubResource("Animation_5fytw"),
&"death": SubResource("Animation_a4w0n")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_gfjh0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_od7r3")
scale = Vector2(5.375, 5.375)
sprite_frames = SubResource("SpriteFrames_gfjh0")
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_khfn1")

[node name="TurnAnimation" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Invincible" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="AnimationFlash" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0krx5")
}

[node name="BulletSpawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_3n5sw")

[node name="ShootCooldown" type="Timer" parent="."]
one_shot = true

[node name="AnimationDeath" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4ste8")
}

[connection signal="timeout" from="TurnAnimation" to="." method="_on_turn_animation_timeout"]
[connection signal="timeout" from="Invincible" to="." method="_on_invincible_timeout"]
